Remove unnecessary manually adding token to header and fix test.